<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.optimove.mobile.develop.optimovepushnotificationpoc.MainActivity">
    <item
        android:id="@+id/normal_notification"
        android:title="@string/createNotification"
        app:showAsAction="never"/>
    <item
        android:id="@+id/style_inbox_notification"
        android:title="@string/createNotificationStyleInbox"
        app:showAsAction="never"/>
    <item
        android:id="@+id/big_texte_notification"
        android:title="@string/createNotificationBigText"
        app:showAsAction="never"/>
    <item
        android:id="@+id/big_picture_notification"
        android:title="@string/createNotificationBigPicture"/>

    <item
        android:id="@+id/customView"
        android:title="@string/createNotificationCustomView"/>
</menu>
